WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99485
[EFL][WK2][AC] Url bar should not be covered by the web view
https://bugs.webkit.org/show_bug.cgi?id=99485
Summary
[EFL][WK2][AC] Url bar should not be covered by the web view
Yael
Reported
2012-10-16 11:30:17 PDT
When accelerated compositing is in use, the web view and its surface are not positioned correctly. A patch is coming.
Attachments
Patch
(5.66 KB, patch)
2012-10-16 12:08 PDT
,
Yael
no flags
Details
Formatted Diff
Diff
Patch
(5.67 KB, patch)
2012-10-16 14:15 PDT
,
Yael
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2012-10-16 12:08:35 PDT
Created
attachment 168992
[details]
Patch
Viatcheslav Ostapenko
Comment 2
2012-10-16 13:27:52 PDT
Comment on
attachment 168992
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=168992&action=review
> Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:688 > + needsNewSurface = priv->evasGlSurface;
Here flag is set under USE(COORDINATED_GRAPHICS) condition.
> Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:707 > + if (needsNewSurface) {
And here it is used under USE(ACCELERATED_COMPOSITING) . I would move assignment out of USE(COORDINATED_GRAPHICS) at least.
Yael
Comment 3
2012-10-16 13:30:56 PDT
(In reply to
comment #2
)
> (From update of
attachment 168992
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=168992&action=review
> > > Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:688 > > + needsNewSurface = priv->evasGlSurface; > > Here flag is set under USE(COORDINATED_GRAPHICS) condition. > > > Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:707 > > + if (needsNewSurface) { > > And here it is used under USE(ACCELERATED_COMPOSITING) . > I would move assignment out of USE(COORDINATED_GRAPHICS) at least.
I kept the flags as they are now. IMO, we should stick to one flag throughout the code, but I don't think that cleaning out the flags should be part of this patch.
Yael
Comment 4
2012-10-16 14:03:35 PDT
Created
https://bugs.webkit.org/show_bug.cgi?id=99503
to fix the flags.
Yael
Comment 5
2012-10-16 14:15:16 PDT
Created
attachment 169025
[details]
Patch Update based on
comment #2
.
Laszlo Gombos
Comment 6
2012-10-16 18:26:01 PDT
Comment on
attachment 169025
[details]
Patch LGTM, r=me.
WebKit Review Bot
Comment 7
2012-10-16 18:42:10 PDT
Comment on
attachment 169025
[details]
Patch Clearing flags on attachment: 169025 Committed
r131543
: <
http://trac.webkit.org/changeset/131543
>
WebKit Review Bot
Comment 8
2012-10-16 18:42:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug