[EFL][WK2][AC] Url bar should not be covered by the web view https://bugs.webkit.org/show_bug.cgi?id=99485

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-10-16
Reviewed by Laszlo Gombos.

When accelerated compositing is enabled, the url bar is covered by the web view.
This was caused by 2 issues:
- _ewk_view_smart_calculate was called before the first gl surface was created,
  so an early return caused it to not save the new view position.
- When painting the view, we need to take into account the position of
  the view within the window, i.e. the url bar.

* UIProcess/API/efl/EflViewportHandler.cpp:
(WebKit::EflViewportHandler::display):
* UIProcess/API/efl/EflViewportHandler.h:
(EflViewportHandler):
* UIProcess/API/efl/ewk_view.cpp:
(_ewk_view_smart_calculate):
(ewk_view_display):

Canonical link: https://commits.webkit.org/117502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131543 268f45cc-cd09-0410-ab3c-d52691b4dbfc